err/ckanext-scheming.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ckanext'...
Listing './lib/python3.5/site-packages/ckanext/scheming'...
Compiling './lib/python3.5/site-packages/ckanext/scheming/commands.py'...
***   File "./lib/python3.5/site-packages/ckanext/scheming/commands.py", line 38
    print self.__doc__
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ckanext/scheming/templates'...
Listing './lib/python3.5/site-packages/ckanext/scheming/templates/scheming'...
Listing './lib/python3.5/site-packages/ckanext/scheming/templates/scheming/display_snippets'...
Listing './lib/python3.5/site-packages/ckanext/scheming/templates/scheming/form_snippets'...
Listing './lib/python3.5/site-packages/ckanext/scheming/templates/scheming/group'...
Listing './lib/python3.5/site-packages/ckanext/scheming/templates/scheming/organization'...
Listing './lib/python3.5/site-packages/ckanext/scheming/templates/scheming/package'...
Listing './lib/python3.5/site-packages/ckanext/scheming/templates/scheming/package/snippets'...
Listing './lib/python3.5/site-packages/ckanext/scheming/templates/scheming/snippets'...
Listing './lib/python3.5/site-packages/ckanext/scheming/tests'...
Compiling './lib/python3.5/site-packages/ckanext/scheming/validation.py'...
***   File "./lib/python3.5/site-packages/ckanext/scheming/validation.py", line 143
    except (TypeError, ValueError), e:
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ckanext_scheming-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
